tests/paczka1/fuzzy1/39208390.err
Error in line 1: LRqfJXJrBK0 S234 33,0
Error in line 4: LRqfJXJrBK0 S407 19,7
Error in line 3: 1cuX86q S234 45,2
Error in line 18: S407 S105 91,9
Error in line 19: S407 A768 56,8
Error in line 21: S407 S105 38,1
Error in line 27: Bgz S105 58,6
Error in line 16: LRqfJXJrBK0 A768 36,1
Error in line 34: LRqfJXJrBK0 S234 76,7
